adding permissions and checkDeviceLocation is enable or not and add verity from that permission then add new geofence in SaveReminderFragment class

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,6 +33,10 @@
     <string name="welcome">Welcome</string>
     <string name="err_enter_title">Please enter title</string>
     <string name="err_select_location">Please select location</string>
+    <string name="save_error">make sure you added title and description and select location before saving</string>
+    <string name="added_geofence_successfully">Added Geofence successfully</string>
+
+
 
     <!-- Error strings -->
     <string name="geofence_unknown_error">Unknown error: the Geofence service is not available now.</string>
